Updated website content and added new features mobile

--- a/index.html
+++ b/index.html
@@ -634,13 +634,13 @@
                     </div>
                     <div class="col-md-12 single-selection">
                       <div class="select-card" data-selection="2">
-                        <p>Frontend</p>
+                        <p>Development</p>
                         <i class="fas fa-desktop"></i>
                       </div>
                     </div>
                     <div class="col-md-12 single-selection">
                       <div class="select-card" data-selection="3">
-                        <p>Backend</p>
+                        <p>Data Science & Analytics</p>
                         <i class="fas fa-database"></i>
                       </div>
                     </div>
@@ -667,64 +667,79 @@
                                   <img src="https://img.icons8.com/color/48/html-5--v1.png" alt="">
                                 </div>
                               </div>
-                              <div class="col-10 pl-4">
+                              <div class="col-md-10 pl-4">
                                 <h6>HTML5</h6>
                                 <p>Proficient in the features of HTML5.</p>
                               </div>
                             </div>
                           </div>
-                          <div class="col-12 py-3 px-0 single-skill">
+                          <div class="col-md-6 py-3 pr-4 pl-0 single-skill">
                             <div class="row">
-                              <div class="col-2">
+                              <div class="col-md-2">
                                 <div class="logo">
                                   <img src="https://img.icons8.com/color/48/css3.png" alt="">
                                 </div>
                               </div>
-                              <div class="col-10 pl-4">
+                              <div class="col-md-10 pl-4">
                                 <h6>CSS3</h6>
                                 <p>Proficient in the features of CSS3 and CSS preprocessor <b>SASS</b>.</p>
                               </div>
                             </div>
                           </div>
-                          <div class="col-12 py-3 px-0 single-skill">
+                          <div class="col-md-6 py-3 pr-4 pl-0 single-skill">
                             <div class="row">
-                              <div class="col-2">
+                              <div class="col-md-2">
+                                <div class="logo">
+                                  <img src="https://img.icons8.com/?size=100&id=4PiNHtUJVbLs&format=png&color=000000" alt="">
+                                </div>
+                              </div>
+                              <div class="col-md-10 pl-4">
+                                <h6>Tailwind CSS</h6>
+                                <p>Proficient in using Tailwind CSS for rapidly building custom, responsive web design.</p>
+
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-md-6 py-3 pr-4 pl-0 single-skill">
+                            <div class="row">
+                              <div class="col-md-2">
                                 <div class="logo">
                                   <img src="https://img.icons8.com/color/48/javascript--v1.png" alt="">
                                 </div>
                               </div>
-                              <div class="col-10 pl-4">
+                              <div class="col-md-10 pl-4">
                                 <h6>JavaScript</h6>
                                 <p>Proficient in <b>ES6</b> features of Javascript and <b>TypeScript</b>.</p>
                               </div>
                             </div>
                           </div>
-                          <div class="col-12 py-3 px-0 single-skill">
+                          <div class="col-md-6 py-3 pr-4 pl-0 single-skill">
                             <div class="row">
-                              <div class="col-2">
+                              <div class="col-md-2">
                                 <div class="logo">
                                   <img src="https://img.icons8.com/color/48/java-coffee-cup-logo--v1.png" alt="">
                                 </div>
                               </div>
-                              <div class="col-10 pl-4">
+                              <div class="col-md-10 pl-4">
                                 <h6>Java</h6>
                                 <p>Proficient in Java syntax and object-oriented programming concepts.</p>
                               </div>
                             </div>
                           </div>
-                          <div class="col-12 py-3 px-0 single-skill">
+                          <div class="col-md-6 py-3 pr-4 pl-0 single-skill">
                             <div class="row">
-                              <div class="col-2">
+                              <div class="col-md-2">
                                 <div class="logo">
-                                  <img src="https://img.icons8.com/ios-filled/50/php-logo.png" alt="">
+                                  <img src="https://img.icons8.com/?size=100&id=13441&format=png&color=000000" alt="">
                                 </div>
                               </div>
-                              <div class="col-10 pl-4">
-                                <h6>PHP</h6>
-                                <p>Knowledgeable about the basic usage of PHP.</p>
+                              <div class="col-md-10 pl-4">
+                                <h6>Python</h6>
+                                <p>Proficient in Python, leveraging its versatility to develop efficient and scalable solutions.</p>
                               </div>
                             </div>
                           </div>
+                          
                         </div>
                       </div>
                     </div>
