--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,7 @@
                     <div class="single-advantage mobile-text-center fade-up-box">
                       <h4 class="fade-up-item">Software Development Intern</h4>
                       <h5 class="fade-up-item">Kalp Systems</h5>
-                      <span class="fade-up-item">June 2022 - August 2022</span>
+                      <span class="fade-up-item">May 2023 - July 2023</span>
                       
                       <p class="fade-up-item">
                         Engineered full-stack enterprise solutions using <b>React.js</b>, <b>Node.js</b>, and <b>PostgreSQL</b>, delivering scalable architecture. Built and deployed modular RESTful APIs with JWT authentication and Role-Based Access Control, leveraging <b>Express.js</b> and <b>Sequelize ORM</b> for secure backend workflows. Developed responsive LMS dashboards with Material UI and optimized SQL queries to reduce fetch time by 40%, enabling real-time synchronization across multi-campus systems. Followed Agile methodologies to accelerate project delivery within the Software Development Life Cycle.
@@ -1212,9 +1212,9 @@
                   <div class="col-md-2"></div>
                   <div class="col-md-8 advantages-detail">
                     <div class="single-advantage mobile-text-center fade-up-box">
-                      <h4 class="fade-up-item">Data Science Intern</h4>
+                      <h4 class="fade-up-item">Software Development Intern</h4>
                       <h5 class="fade-up-item">Quark Systems</h5>
-                      <span class="fade-up-item">June 2023 - August 2023</span>
+                      <span class="fade-up-item">January 2024 - April 2024</span>
                       <p class="fade-up-item">
                         Developed RESTful APIs for a team management module within an in-house CRM using <b>Python</b>, <b>Flask</b>, and <b>Django</b>, enabling managers to assign tasks and monitor team performance via integrated dashboards and reports. Optimized <b>Django ORM</b> queries and <b>PostgreSQL</b> indexing to enhance database responsiveness. Supported automation of CI/CD pipelines with <b>Jenkins</b> and managed AWS infrastructure using <b>Terraform</b>, streamlining deployment workflows and improving system reliability.
                         </p>
