New project added

--- a/index.html
+++ b/index.html
@@ -1318,7 +1318,22 @@
               <div class="portfolio-text">
                 <h6>QuickCaption.ai</h6>
                 <p>Next.js, AWS Transcribe, S3, FFmpeg, React, TailwindCSS</p>
+                
                 <span>Transcription Service</span>
+              </div>
+            </div>
+            <div class="single-portfolio">
+              <div class="portfolio-img" id="portfolio-newpages-merchant">
+                
+                <a href="https://prompt-pilot-ai.vercel.app" target="_blank">
+                  <img src="./images/Screenshot 2025-06-05 at 6.11.18 PM.png" alt="" style="width: 100%; height: auto; cursor: pointer;">
+                </a>
+              </div>
+              <div class="portfolio-text">
+                <h6>PromptPilot.ai</h6>
+                <p>Next.js, React, TypeScript, Tailwind CSS, Gemini LLM, Clerk, PostgreSQL, Drizzle ORM, Vercel, GitHub Actions</p>
+<span> AI-Powered Content Generation Platform</span>
+
               </div>
             </div>
 
