Laptop fixed for smaller screen

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="css/font.css?v=24">
   <link rel="stylesheet" href="css/style.css?v=24">
   <link rel="stylesheet" href="css/responsive.css?v=24">
+  <link rel="stylesheet" href="css/mobile-chat.css?v=24">
   <!-- import jquery and bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -109,7 +110,7 @@
 
           <script>
             document.addEventListener("DOMContentLoaded", function () {
-              const jobTitles = ["Full Stack Developer", "Data Scientist", "AI/ML Enthusiast", "Problem Solver"];
+              const jobTitles = ["Full Stack AI Developer", "AI Workflow Architect", "Intelligent Systems Builder"];
               let jobIndex = 0;
               let jobElement = document.querySelector(".typing-job");
 
@@ -224,25 +225,9 @@
               </div>
             </div>
           </div>
-          <div class="person-beside">
-            <svg width="100%" height="100%" viewBox="0 0 275 494" fill="none" xmlns="http://www.w3.org/2000/svg">
 
-
-            </svg>
-          </div>
         </div>
-        <div class="phone-wrapper desktop-hidden"
-          style="width: 150px !important; height: 280px !important; transform: scale(2.5) !important; margin: 0 auto !important; padding: 50px 0 !important;">
-          <img src="./images/home-phone.png" alt=""
-            style="width: 100% !important; height: 100% !important; object-fit: contain !important;">
-          <div class="phone-screen-wrapper">
-            <div class="phone-screen">
-              <div class="container">
-                <!-- Mobile phone content can be added here -->
-              </div>
-            </div>
-          </div>
-        </div>
+        
       </div>
     </div>
     </div>
@@ -751,6 +736,7 @@
   </section>
   <script src="js/script.min.js"></script>
   <script src="js/chat.js"></script>
+  <script src="js/mobilechat.js"></script>
 </body>
 
 </html>
