--- a/index.html
+++ b/index.html
@@ -226,8 +226,66 @@
             </div>
           </div>
 
+          <!-- Phone wrapper for mobile devices -->
+          <div class="phone-wrapper">
+            <img src="./images/home-phone.png" alt="Phone mockup" id="phone-image">
+            
+            <div class="phone-screen-wrapper">
+              <div class="phone-screen">
+                <div class="container">
+                  <div class="chat-interface">
+                    <div class="chat-header">
+                      <div class="chat-avatar">
+                        <div class="avatar-circle">
+                          <img src="images/IMG_0063_(4).jpg" alt="Mitansh Patel" />
+                        </div>
+                      </div>
+                      <div class="chat-info">
+                        <h4>Mitansh Patel</h4>
+                        <span class="status">● Online</span>
+                      </div>
+                    </div>
+
+                    <div class="chat-messages" id="chatMessagesPhone">
+                      <div class="message bot-message">
+                        <div class="message-content">
+                          <p id="typingMessagePhone"></p>
+                        </div>
+                        <span class="message-time">Just now</span>
+                      </div>
+                    </div>
+
+                    <div class="chat-suggestions" id="chatSuggestionsPhone">
+                      <button class="suggestion-btn" data-message="Tell me about your projects">
+                        💼 Tell me about your projects
+                      </button>
+                      <button class="suggestion-btn" data-message="What are your technical skills?">
+                        🛠️ What are your technical skills?
+                      </button>
+                      <button class="suggestion-btn" data-message="Tell me about yourself">
+                        👋 Tell me about yourself
+                      </button>
+                    </div>
+
+                    <div class="chat-input-area">
+                      <div class="input-wrapper">
+                        <input type="text" id="chatInputPhone" placeholder="Ask me about Mitansh's experience..." />
+                        <button id="sendButtonPhone" class="send-btn">
+                          <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+                            <path d="M22 2L11 13" stroke="currentColor" stroke-width="2" />
+                            <path d="M22 2L15 22L11 13L2 9L22 2Z" stroke="currentColor" stroke-width="2" />
+                          </svg>
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
-        
+
       </div>
     </div>
     </div>
