--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <!-- Phone wrapper for mobile devices -->
           <div class="phone-wrapper">
             <img src="./images/home-phone.png" alt="Phone mockup" id="phone-image">
-            
+
             <div class="phone-screen-wrapper">
               <div class="phone-screen">
                 <div class="container">
@@ -546,7 +546,7 @@
                 <h6>ModMatch</h6>
                 <p> Inngest, Gemni LLM, Next.js, MondoDb Atlas</p>
 
-                <span>AI-Powered Ticket Assignment System</span>
+                <span>AI-Powered Ticket<br> Assignment System</span>
               </div>
             </div>
 
@@ -577,7 +577,7 @@
                 <h6>PromptPilot.ai</h6>
                 <p>Next.js, React, TypeScript, Tailwind CSS, Gemini LLM, Clerk, PostgreSQL, Drizzle ORM, Vercel, GitHub
                   Actions</p>
-                <span> AI-Powered Content Generation Platform</span>
+                <span> AI-Powered Content <br> Generation Platform</span>
 
               </div>
             </div>
